<resources>
    <string name="app_name">Shopx</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">SUBMIT</string>
    <string name="logo">Logo</string>
    <string name="login_if_you_have_account">If You Do not Have Account Then SignUp </string>
    <string name="Sign_up_if_you_have_account">If You Have Account Then Login </string>
    <string name="next">NEXT</string>
    <string name="login">LOGIN</string>
    <string name="phone">Phone : 09123456789</string>
    <string name="address">Address</string>
    <string name="profile">profile</string>
    <string name="shopcart">shopCart</string>
    <string name="truck">Truck</string>
    <string name="shopbag">ShopBag</string>
    <string name="payment_list">Payment List</string>
    <string name="my_address">MyAddress</string>
    <string name="change_password">change Password</string>
    <string name="setting">Setting</string>
    <string name="icon1">icon1</string>
    <string name="icon2">icon2</string>
    <string name="icon3">icon3</string>
    <string name="icon4">icon4</string>
    <string name="icon5">icon5</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="zero">0</string>
    <string name="negative">-</string>
    <string name="plus">+</string>
    <string name="lore">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</string>
    <string name="product_name">Iphone 11</string>
    <string name="product_price">9999$</string>
    <string name="favorite">favorite</string>
    <string name="check_out">CHECK OUT</string>
    <string name="total">Total:</string>
    <string name="your_basket">Your Basket</string>
    <string name="i_don_t_remember_my_password">I don\'t remember my password</string>
    <string name="product_photo">productPhoto</string>
    <string name="basketimage">BasketImage</string>
    <string name="trashcan">trashcan</string>
    <string name="date">2021/4/15</string>
    <string name="inprogress">inProgress</string>
    <string name="intheway">InTheWay</string>
    <string name="delivered">Delivered</string>
    <string name="packing">Packing</string>
</resources>