<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/cardpayment"
            android:id="@+id/payment_list"
            android:title="@string/payment_list" />
        <item
            android:icon="@drawable/myaddress"
            android:id="@+id/user_address"
            android:title="@string/my_address" />
        <item
            android:icon="@drawable/change_password_icon"
            android:id="@+id/change_password"
            android:title="@string/change_password" />
        <item
            android:icon="@drawable/setting"
            android:id="@+id/drawer_setting"
            android:title="@string/setting" />
    </group>

</menu>