<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383E56"
    tools:context=".ProductPage">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="#fff"
                android:layout_height="wrap_content">

                <ImageView
                    android:transitionName="product"
                    android:contentDescription="@string/product_photo"
                    android:scaleType="fitCenter"
                    android:id="@+id/view_pager"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/product_page_favorite"
                    android:padding="5dp"
                    android:src="@drawable/favorite_icon"
                    android:contentDescription="@string/favorite"
                    android:layout_width="40dp"
                    android:background="@drawable/homescreen_shop_btn_back"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/product_page_productName"
                android:text="@string/product_name"
                android:textColor="#fff"
                android:layout_marginRight="11dp"
                android:layout_marginLeft="11dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/product_page_price"
                android:text="@string/product_price"
                android:textColor="#F80404"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/product_page_desc"
                android:text="@string/lore"
                android:textSize="17sp"
                android:textColor="#fff"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:background="@drawable/product_page_theme_white_back"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="14dp"
            android:layout_marginLeft="14dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plus_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="#fff"
                android:text="@string/plus"
                android:textSize="25sp"
                android:background="@drawable/product_page_plus"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/counter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/zero"
                android:textSize="25sp"
                android:textColor="#ffff"
                android:background="#7ECA9C"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/plus_btn"
                android:layout_toRightOf="@id/plus_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/negative"
                android:layout_width="50dp"
                android:text="@string/negative"
                android:textColor="#fff"
                android:textSize="35sp"
                android:background="@drawable/product_page_negative"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/counter"
                android:layout_toRightOf="@id/counter" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:id="@+id/add_to_cart"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:background="@drawable/product_page_add_to_card_back"
            android:layout_margin="14dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>